--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,6 @@ buildscript {
     }
     dependencies {
         classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.6'
-        
 
     }
 }
@@ -26,6 +25,7 @@ allprojects {
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
         aiVersion = '1.8.0'
+        visuiVersion = '1.4.0'
     }
 
     repositories {
@@ -78,7 +78,8 @@ project(":core") {
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-        
+        compile "com.kotcrab.vis:vis-ui:$visuiVersion"
+
     }
 		compileJava {
 			sourceCompatibility = 1.8
