--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xms128m -Xmx1500m
 org.gradle.configureondemand=true
-org.gradle.java.home=C:\\Program Files\\Java\\jdk1.8.0_131
+org.gradle.java.home=___URL_TOO_YOUR_JAVA_HOME___
